--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP:300');
+
+* {
+  box-sizing: border-box
+}
+
 .App {
   text-align: center;
+  font-family: 'Noto Serif JP', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+table {
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.max-temp {
+  font-weight: 700;
 }
